[tool.poetry]
name = "obsidian-blog"
version = "0.1.0"
description = ""
authors = ["withakay <jack@fader.co.uk>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-roamlinks-plugin = "^0.2.0"
pybind11_mkdoc = "^2.6.2"
mkdocs-mermaid2-plugin = "^0.6.0"
pymdown-extensions = "^9.8"
pygments = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
